[package]
name = "corlinman-tenant"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase 4 Wave 1 multi-tenancy primitives: TenantId newtype, slug validation, per-tenant SQLite path resolution, and a multi-DB pool wrapper keyed by (TenantId, db_name)."

[dependencies]
serde = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
# Phase 4 W3 C4 iter 2: api_keys table mints a per-(tenant, user) bearer
# token, stores its sha256 hash, and uses uuid v4 for the random source
# (122 bits of entropy is plenty for a 30-day client token).
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
