[package]
name = "corlinman-vector"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "corlinman RAG store: HNSW (usearch) + BM25 (sqlite FTS5) with RRF fusion."

[dependencies]
corlinman-core = { path = "../corlinman-core" }
corlinman-proto = { path = "../corlinman-proto" }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
usearch = { workspace = true }
bytes = { workspace = true }
time = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
